projetGL/src/test/deca/context/invalid/provided/invalide_class_03_DeclarationField.deca
// Description : test des types des attributs
// Sortie:
//  Le type d'un attribut ne peux pas étre void.

class A{
    void x;
}